# laba-11

./: .gitignore  PROMPT_LOG.md  README.md
.github/workflows/: docker-build-push.yml
hard/go_project/: .dockerignore  Dockerfile  Makefile  build.bat  build.sh  main.go  main_test.go
mid/: docker-compose.yml
mid/Rust_app/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
mid/Rust_app/src/: main.rs
mid/python_app/: .dockerignore  Dockerfile  app.py  docker-compose.yml  test_app.py
